docs: files directory

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "browser-sync start --server './docs' --files './docs/css/*.css, ./docs/js/*.js, ./docs/*.html ./docs/*.json'",
-    "build": "nodemon index.js"
+    "start": "browser-sync start --server './' --files './css/*.css, ./js/*.js, ./*.html ./*.json'",
+    "build": "nodemon ./index.js"
   },
   "devDependencies": {
     "browser-sync": "^3.0.2",
