--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "browser-sync start --server './' --files './css/*.css, ./js/*.js, ./*.html ./*.json'",
-    "build": "nodemon ./index.js"
+    "serve": "browser-sync start --config bs-config.js",
+    "build": "nodemon --watch ./src ./src/build.js"
   },
   "devDependencies": {
     "browser-sync": "^3.0.2",
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "browser-sync-webpack-plugin": "^2.3.0"
   }
 }
