--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -38,6 +38,9 @@ jobs:
         with:
           nodejs: "20"
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
       - name: Build
         env:
           BUILD_SERVER: "true"
@@ -46,13 +49,10 @@ jobs:
           yarn
           yarn run build
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '/docs'
+          path: './docs'
 
       - name: Deploy to GitHub Pages
         id: deployment
