--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "MIT",
   "scripts": {
     "serve": "browser-sync start --config bs-config.js",
-    "build": "bash -c '[[ $BUILD_SERVER == \"true\" ]] && node ./src/build.js || nodemon --watch ./src ./src/build.js'"
+    "build": "bash -c '[[ $BUILD_SERVER == \"true\" ]] && node ./src/build.js || nodemon'"
   },
   "devDependencies": {
     "browser-sync": "^3.0.2",
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "browser-sync-webpack-plugin": "^2.3.0"
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "lodash": "^4.17.21"
   }
 }
